--- a/templates/lista.html
+++ b/templates/lista.html
@@ -16,6 +16,8 @@
             <thead class="thead-default">
                 <tr>
                     <th>Nome</th>
+                    <th>Categoria</th>
+                    <th>Console</th>
                 </tr>
             </thead>
             <tbody>
