--- a/templates/template.html
+++ b/templates/template.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jogoteca</title>
-        <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 </head>
+
 <body>
     <div class="container">
-      <div class="page-header">
-          <h1>{{ titulo }}</h1>
-      </div>
-
-      {% block conteudo %}  {% endblock %}
-
+        <div class="page-header">
+            <h1>{{ titulo }}</h1>
         </div>
-    </body>
+
+        {% block conteudo %} {% endblock %}
+
+    </div>
+</body>
+
 </html>
